# DistributedExercisesAAU

./: .gitignore  README.md  exercise_runner.py  pyproject.toml
exercises/: exercise0.py  exercise1.py
src/distributed_exercises_aau/: __init__.py  __main__.py
src/distributed_exercises_aau/cli/: __init__.py
src/distributed_exercises_aau/exercise_runner/: __init__.py  collector.py  runner.py
src/distributed_exercises_aau/tools/: __init__.py  process.py
